# SnapTranslate

./: .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/packaging/: README.md  README_user.txt  snaptranslate.spec
doc/: design.md  question.md  requirements.md
src/snaptranslate/: __init__.py  __main__.py  app.py  main.py
src/snaptranslate/application/: hotkey_controller.py  input_translate_usecase.py  read_translate_usecase.py  timeout.py
src/snaptranslate/domain/: __init__.py  models.py  state.py
src/snaptranslate/infrastructure/: clipboard.py  config_store.py  history_store.py  image_encoder.py  logging.py  ocr.py  paths.py  screenshot.py  translator.py
src/snaptranslate/presentation/: input_window.py  markup.py  overlay_window.py  region_selector.py  settings_window.py  status_window.py  tray_icon.py
tests/unit/: test_config_migration.py  test_config_store.py  test_history_store.py  test_image_encoder.py  test_input_translate_usecase.py  test_markup.py  test_models.py  test_ocr.py  test_read_translate_usecase.py  test_translator.py
