[project]
name = "snaptranslate"
version = "0.1.0"
description = "Windows OCR and prompt-based translation overlay tool"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
snaptranslate = "snaptranslate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
